@@ -1,3 +1,5 @@
+* Add subdivision as criteria
+
 Version 5.2.0 - 2019-05-06
 * Bug fixes (see mercurial logs for details)
 
